tests: prefer Integer.valueOf vs new Integer