@@ -38,16 +38,14 @@ public class LinkedList_T {
 
     Assert.assertEquals(2, list.size());
 
-    Assert.assertEquals(new Integer(1), list.front());
-    Assert.assertEquals(new Integer(0), list.back());
-    Assert.assertEquals(null, list.head.prev);
+    Assert.assertEquals(Integer.valueOf(1), list.front());
+    Assert.assertEquals(Integer.valueOf(0), list.back());
 
     list.insertFront(2);
     Assert.assertEquals(3, list.size());
 
-    Assert.assertEquals(new Integer(2), list.front());
-    Assert.assertEquals(new Integer(0), list.back());
-    Assert.assertEquals(null, list.head.prev);
+    Assert.assertEquals(Integer.valueOf(2), list.front());
+    Assert.assertEquals(Integer.valueOf(0), list.back());
   }
 
   @Test
@@ -57,16 +55,14 @@ public class LinkedList_T {
 
     Assert.assertEquals(2, list.size());
 
-    Assert.assertEquals(new Integer(0), list.front());
-    Assert.assertEquals(new Integer(1), list.back());
-    Assert.assertEquals(null, list.tail.next);
+    Assert.assertEquals(Integer.valueOf(0), list.front());
+    Assert.assertEquals(Integer.valueOf(1), list.back());
 
     list.insertEnd(2);
     Assert.assertEquals(3, list.size());
 
-    Assert.assertEquals(new Integer(0), list.front());
-    Assert.assertEquals(new Integer(2), list.back());
-    Assert.assertEquals(null, list.tail.next);
+    Assert.assertEquals(Integer.valueOf(0), list.front());
+    Assert.assertEquals(Integer.valueOf(2), list.back());
   }
 
   @Test
@@ -76,12 +72,11 @@ public class LinkedList_T {
     list.insertEnd(0);
     list.insertEnd(1);
 
-    Assert.assertEquals(new Integer(0), list.removeFront());
+    Assert.assertEquals(Integer.valueOf(0), list.removeFront());
     Assert.assertEquals(1, list.size());
-    Assert.assertEquals(new Integer(1), list.front());
-    Assert.assertEquals(null, list.head.prev);
+    Assert.assertEquals(Integer.valueOf(1), list.front());
 
-    Assert.assertEquals(new Integer(1), list.removeFront());
+    Assert.assertEquals(Integer.valueOf(1), list.removeFront());
     Assert.assertEquals(0, list.size());
     Assert.assertNull(list.front());
   }
@@ -93,12 +88,11 @@ public class LinkedList_T {
     list.insertEnd(0);
     list.insertEnd(1);
 
-    Assert.assertEquals(new Integer(1), list.removeEnd());
+    Assert.assertEquals(Integer.valueOf(1), list.removeEnd());
     Assert.assertEquals(1, list.size());
-    Assert.assertEquals(new Integer(0), list.front());
-    Assert.assertEquals(null, list.tail.next);
+    Assert.assertEquals(Integer.valueOf(0), list.front());
 
-    Assert.assertEquals(new Integer(0), list.removeEnd());
+    Assert.assertEquals(Integer.valueOf(0), list.removeEnd());
     Assert.assertEquals(0, list.size());
     Assert.assertNull(list.front());
   }
@@ -110,8 +104,8 @@ public class LinkedList_T {
     Assert.assertFalse(list.remove(1));
     Assert.assertEquals(1, list.size());
 
-    Assert.assertEquals(new Integer(0), list.front());
-    Assert.assertEquals(new Integer(0), list.back());
+    Assert.assertEquals(Integer.valueOf(0), list.front());
+    Assert.assertEquals(Integer.valueOf(0), list.back());
   }
 
   @Test
@@ -133,8 +127,8 @@ public class LinkedList_T {
     Assert.assertTrue(list.remove(0));
     Assert.assertEquals(1, list.size());
 
-    Assert.assertEquals(new Integer(1), list.front());
-    Assert.assertEquals(new Integer(1), list.back());
+    Assert.assertEquals(Integer.valueOf(1), list.front());
+    Assert.assertEquals(Integer.valueOf(1), list.back());
   }
 
   @Test
@@ -145,8 +139,8 @@ public class LinkedList_T {
     Assert.assertTrue(list.remove(1));
     Assert.assertEquals(1, list.size());
 
-    Assert.assertEquals(new Integer(0), list.front());
-    Assert.assertEquals(new Integer(0), list.back());
+    Assert.assertEquals(Integer.valueOf(0), list.front());
+    Assert.assertEquals(Integer.valueOf(0), list.back());
   }
 
   @Test
@@ -158,8 +152,8 @@ public class LinkedList_T {
     Assert.assertTrue(list.remove(1));
     Assert.assertEquals(2, list.size());
 
-    Assert.assertEquals(new Integer(0), list.front());
-    Assert.assertEquals(new Integer(2), list.back());
+    Assert.assertEquals(Integer.valueOf(0), list.front());
+    Assert.assertEquals(Integer.valueOf(2), list.back());
   }
 
   @Test
@@ -171,8 +165,8 @@ public class LinkedList_T {
     Assert.assertTrue(list.remove(0));
     Assert.assertEquals(2, list.size());
 
-    Assert.assertEquals(new Integer(1), list.front());
-    Assert.assertEquals(new Integer(0), list.back());
+    Assert.assertEquals(Integer.valueOf(1), list.front());
+    Assert.assertEquals(Integer.valueOf(0), list.back());
   }
 
   @Test
@@ -200,7 +194,7 @@ public class LinkedList_T {
     Iterator<Integer> itr = list.iterator();
     for (int i = 0; i < list.size(); i++) {
       Assert.assertTrue(itr.hasNext());
-      Assert.assertEquals(new Integer(i), itr.next());
+      Assert.assertEquals(Integer.valueOf(i), itr.next());
     }
 
     Assert.assertFalse(itr.hasNext());
